# mlops-end-to-end

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  run.py
docker/: Dockerfile.jupyter
src/: .env.dist  experiment.ipynb  experiment.py  pipeline.ipynb
src/config/: settings.py
src/data/: bucket_client.py  preparation.py
src/data/models/: model_bucket_client.py  model_data_source.py  model_dataset.py  model_dataset_metadata.py
src/data/preparation/: prepare_bucket.py  prepare_data_sources.py  prepare_datasets.py  prepare_raw_datasets.py
src/data/services/: service_data_uploader.py
src/data/validation/: validate_datasets.py
src/flows/: pipeline.py
src/materializers/: materializer_bucket_client.py  materializer_data_source.py  materializer_dataset.py
src/models/: model_bucket_client.py  model_data_source.py  model_dataset.py
src/orchestrator/: Dockerfile  pyproject.toml
src/orchestrator/flows/: pipeline.py
src/pipelines/: pipeline_datalake.py  pipeline_experiment.py
src/services/: service_data_uploader.py
src/steps/data/: data_extractor.py  data_sources_uploaders.py  data_validators.py  datalake_initializers.py  dataset_creators.py  dataset_preparators.py  prepare_bucket_step.py  prepare_data_sources_step.py  prepare_datasets_step.py
src/steps/training/: model_trainers.py  train_model_step.py
src/utils/: tracker_helper.py
stack/: setup-local-stack.sh
