[tool.poetry]
name = "mlops-end-to-end"
version = "0.1.0"
description = ""
authors = ["picsalex <132259399+picsalex@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mlops_end_to_end"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
