[tool.poetry]
name = "mlops-end-to-end"
version = "0.1.0"
description = ""
authors = ["picsalex <132259399+picsalex@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
scikit-learn = "^1.3.0"
prefect = "^2.10.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
